# scratch_rag_application

./: .gitignore  README.md  config.yaml  main.py  project-structure.yaml  pyproject.toml
scratch_rag_application/config/: config_handler.py
scratch_rag_application/content_parser/: base_parser.py  parser_factory.py  qa_parser.py
scratch_rag_application/embedding/: base_embedding.py  embedding_factory.py  factory.py  fastembed.py  huggingface.py
scratch_rag_application/loader/: document_factory.py  url_loader.py
scratch_rag_application/scoring/: base_scorer.py  bm25_scorer.py  hybrid_search.py  scorer_factory.py
scratch_rag_application/search/: base_search.py  bm25_search.py  hybrid_search.py  search_factory.py  vector_search.py
scratch_rag_application/text_splitter/: base_splitter.py  markdown_splitter.py  recursive_splitter.py  sentence_transformer_splitter.py  spacy_splitter.py  splitter_factory.py
scratch_rag_application/utils/: chroma_inspector.py  cli_handler.py  logging_config.py  text_cleaner.py
scratch_rag_application/vector_store/: base_vector_store.py  chroma.py  vector_store_factory.py
scratch_rag_application/visualization/: base_visualization.py  document_comparison_visualization.py  matplotlib_visualization.py  visualization_factory.py
tests/: test_content_parser.py  test_url_loader.py
