[tool.poetry]
name = "scratch-rag-application"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
langchain-core = "^0.3.15"
langchain-community = "^0.3.5"
langchain-ollama = "^0.2.0"
langchain-chroma = "^0.1.4"
langchain-text-splitters = "^0.3.2"
bs4 = "^0.0.2"
pyyaml = "^6.0.2"
markdownify = "^0.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
